--- a/default.hbs
+++ b/default.hbs
@@ -40,21 +40,19 @@
       <section>
         <span class="print-data copyright-notice">
           &copy; {{date format="YYYY"}}
-          <a href="{{@blog.url}}/">{{@blog.title}}</a>
+          <a href="{{@blog.url}}/">Training 4 Developers, Inc.</a>
           &nbsp;&bull;&nbsp;
+					<span>All Rights Reserved.</span>
         </span>
+			</section>
+			<section>
 
         <span>
-
-          <a href="http://github.com/curiositry/mnml-ghost-theme">mnml</a>
+          Adapted from the <a href="http://github.com/curiositry/mnml-ghost-theme">mnml</a>
           theme by
           <a href="http://curiositry.github.io">Curiositry</a>
         </span>
 
-        <span>
-         &nbsp;&bull;&nbsp;
-         Proudly published with
-          <a href="https://ghost.org"><span class="icon-ghost typl8-zeta"></span><span class="hidden">Ghost</span></a>             </span>
       </section>
     </footer>
 
