--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -362,7 +362,9 @@ pre[class*="language-"], .token.operator{
 
 pre[class*="language-"]{
   padding: 10px !important;
-  margin: 0 0 1.7rem 0 !important;
+	/* added more margin space between code and previous paragraph */
+	/* modified source because of !important */
+  margin: 1rem 0 1.7rem 0 !important;
 }
 
 code[class*="language-"]{
@@ -1493,7 +1495,7 @@ top: -35px;
   html{
     font-size:80%;
   }
-  
+
   .inner, .main-header, .post {
     padding: 1.1rem 2.457rem;
   }
@@ -1535,7 +1537,7 @@ top: -35px;
     height: auto;
     /*padding-left: .55rem;*/
   }
-  
+
   .blog-logo img {
     display: none;
   }
@@ -1546,12 +1548,12 @@ top: -35px;
     text-align: left;
     clear: both;
   }
-  
+
   .main-nav,
   .main-nav--content{
     max-width: 100% !important;
   }
-  
+
   .page-template .main-nav,
   .post-template .main-nav,
   .page-template .main-nav--content,
@@ -1559,10 +1561,10 @@ top: -35px;
     margin-left: 1.1rem;
     left: 0.825rem;
   }
-  
+
   .main-nav h3{
   }
-  
+
   hr {
     margin: 2.4em 0;
   }
@@ -1596,7 +1598,7 @@ top: -35px;
   body{
     font-size:16px;
   }
-  
+
   .inner, .post, .main-header {
     padding: 1.1rem 2.457rem;
   }
@@ -1639,7 +1641,7 @@ top: -35px;
     width: 100% !important;
     right:0.55rem;
     padding-left: 1.1rem;
-    
+
   }
 
   .main-nav{
@@ -1666,7 +1668,7 @@ top: -35px;
   .home-template .open-menu,
   .archive-template .open-menu{
     top:2.457rem;
-    
+
   }
 
   .inner,
