--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -45,3 +45,59 @@
 	text-indent: 0;
 	margin-top:1.5rem;
 }
+
+.post-comments {
+	border-top: #EBF2F6 1px solid;
+}
+
+#disqus_thread {
+	margin-top:-10px;
+}
+
+code::before {
+	display:table;
+	margin-left:-6px;
+	margin-top:-35px;
+	font-size:10px;
+	text-transform: uppercase;
+}
+
+code.language-html::before {
+	content: "HTML";
+}
+
+code.language-javascript::before {
+	content: "JavaScript";
+}
+
+code.language-css::before {
+	content: "CSS";
+}
+
+code.language-graphql::before {
+	content: "GraphQL";
+}
+
+code.language-jsx::before {
+	content: "JSX";
+}
+
+code.language-relayql::before {
+	content: "RelayQL";
+}
+
+code.language-sass::before {
+	content: "SASS";
+}
+
+code.language-less::before {
+	content: "Less";
+}
+
+code.language-sql::before {
+	content: "SQL";
+}
+
+code.language-bash::before {
+	content: "bash";
+}
