--- a/post.hbs
+++ b/post.hbs
@@ -24,7 +24,31 @@
             {{content}}
         </section>
 
+				<section class="post-comments">
+
+					<div id="disqus_thread"></div>
+					<script>
+
+					var disqus_config = function () {
+					this.page.url = '{{@blog.url}}{{url}}';
+					this.page.identifier = 'ghost-{{id}}';
+					};
+
+					(function() { // DON'T EDIT BELOW THIS LINE
+					var d = document, s = d.createElement('script');
+
+					s.src = '//t4d.disqus.com/embed.js';
+
+					s.setAttribute('data-timestamp', +new Date());
+					(d.head || d.body).appendChild(s);
+					})();
+					</script>
+					<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+
+				</section>
+
         <footer class="post-footer">
+
 
         {{! Everything inside the #author tags pulls data from the author }}
         {{#author}}
