--- a/index.hbs
+++ b/index.hbs
@@ -4,12 +4,13 @@
 
 {{! The big featured header }}
 <header class="main-header">
+	<script id="blog-description" type="text/plain">{{@blog.description}}</script>
   <nav class="main-nav clearfix nmt">
     <a class="blog-logo"  href="{{@blog.url}}">{{#if @blog.logo}}<img src="{{@blog.logo}}" alt="Blog Logo"/>{{/if}}</a>
 
     <div class="main-header-content">
         <h1 class="page-title typl8-gamma"> {{@blog.title}}</h1>
-        <h2 class="page-description typl8-epsilon">{{@blog.description}}</h2>
+        <h2 class="page-description typl8-epsilon"></h2>
     </div>
   </nav>
 </header>
